<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ebola Info</string>

    <!-- what is ebola strings? -->
    <string name="it_is_bloody">It is bloody</string>
    <string name="it_is_bloody_msg">Ebola is what scientists call a hemorrhagic fever or EHF - it is a disease of humans and other primates caused by an ebolavirus and operates by making its victims bleed from almost anywhere on their body. Usually, affected people may begin to bleed both within the body and externally until they die.</string>
    <string name="it_is_contagious">It is contagious</string>
    <string name="it_is_contagious_msg">Ebola is highly contagious; being transmitted via contact with body fluids such as blood, saliva, semen or body discharges. Ebola is NOT AIRBORNE!</string>
    <string name="really_deadly">Really deadly</string>
    <string name="really_deadly_msg">50\u0025 to 90\u0025 of people infected with Ebola usually die from it. Ebola is one of the deadliest diseases in the world, killing in a few weeks.</string>
    <string name="un_treatable">Untreatable</string>
    <string name="untreatable_msg">There is no specific treatment for the disease. People infected with Ebola are given either oral rehydration therapy (slightly sweet and salty water to drink) or intravenous to help support their condition.</string>

    <!-- How do you contact Ebola -->
    <string name="howdo_you_contact_it">HOW DO I CONTACT IT?</string>
    <string name="howdo_you_contact_it_msg">Ebola is contagious by 3 major ways. If you do not fall in these 3 categories, you are unlikely to catch it.</string>
    <string name="fluid">Fluids</string>
    <string name="fluid_msg">Contact with body fluids of someone who is VISIBLY sick with the disease. Remember, Ebola is NOT AIRBORNE! </string>
    <string name="dead_victims">Dead victims</string>
    <string name="dead_victims_msg">Contact with the body of someone who has died from Ebola. That means that dead bodies are still CONTAGIOUS.</string>
    <string name="infected_animals">Infected animals</string>
    <string name="infected_animals_msg">Contact with an animal that is carrying the virus; usually fruit bats and monkeys </string>

    <!-- What are the symptoms -->
    <string name="what_are_the_symptoms">WHAT ARE THE SYMPTOMS?</string>
    <string name="sudden_high_fever">Sudden high fever</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="vommiting">Vomiting</string>
    <string name="weakness">Weakness</string>
    <string name="joint_and_muscle_ache">Joint and muscle ache</string>
    <string name="stomach_pain">Stomach pain</string>
    <string name="lack_of_appetite">Lack of appetite</string>
    <string name="sore_throat">Sore throat</string>
    <string name="bleeding">Bleeding</string>

    <!-- How do i prevent it -->
    <string name="how_do_i_prevent_it">HOW DO I PREVENT IT?</string>
    <string name="wash_hands">Wash your hands with Soap and Water</string>
    <string name="wash_hands_msg">Do this a lot. You can also use a good hand sanitizer. Avoid unnecessary contact!</string>
    <string name="keep_clean_ev">Keep a clean environment</string>
    <string name="keep_clean_ev_msg">The virus cannot survive disinfectants, heat, direct sunlight, detergents and soaps. Clean up! You might want to fumigate if you have pests.</string>
    <string name="report">Report</string>
    <string name="report_msg">Report any suspicious symptoms in yourself or anyone else <b>IMMEDIATELY</b> you notice them. Do not delay!!</string>
    <string name="protect_yourself">Protect yourself</string>
    <string name="protect_yourself_msg">Use protective gear if you must care or go near someone you suspect has Ebola. Also, dead bodies can still transmit Ebola. Do not touch them without protective gear or avoid them altogether.</string>
    <string name="educate_everyone">Educate everyone</string>
    <string name="educate_everyone_msg">Tell your neighbors, colleagues and domestic staff. You are safer when everyone is educated about Ebola.</string>
    <string name="dont_handle_dead_bush_meat">Do not handle dead bush meat</string>
    <string name="dont_handle_dead_bush_meat_msg">Some animals are reservoirs of the virus. It might be better to restrict yourself to food you prepared yourself.</string>

    <!-- Don't believe false information -->
    <string name="false_info">DISCARD ANY HOAX ON EBOLA!</string>
    <string name="john_g_lake">Prayer houses</string>
    <string name="john_g_lake_msg">Ebola is not something you take to religious houses for prayers. You can pray for people infected with Ebola over the phone. Do not infect others!!</string>
    <string name="bitter_kola">Bitter kola</string>
    <string name="bitter_kola_msg">No one has been cured or protected from Ebola by taking bitter kola. If you like bitter kola, eat it but protect yourself!</string>
    <string name="salt_water">Salt and Water</string>
    <string name="salt_water_msg">Salt and hot water do not protect against viruses. If it did, it would also cure HIV!</string>
    <string name="preamble">Do you know that there is a <b>DEADLY</b> disease in town? It has claimed many lives and there is no known <b>CURE</b> or <b>VACCINE</b> for it yet. Let Ebola Info enlighten you about this disease&#8230;</string>
    <string name="ebola_info">EBOLA INFO</string>
    <string name="enlighten_me">ENLIGHTEN ME</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="home">START OVER</string>

    <!-- What do I do now -->
    <string name="what_do_i_do_now">WHAT DO I DO NOW?</string>
    <string name="what_to_do_string">Having known the symptoms of Ebola, if you reside in Nigeria and know anyone having such symptoms, send an email or quickly call the following emergency phone numbers:</string>
    <string name="first_number">0800-EBOLA-HELP</string>
    <string name="second_number">08037879701</string>
    <string name="third_number">08037154575</string>
    <string name="help_email">ebolainfo@health.gov.ng</string>
    <string name="what_is_ebola">WHAT IS EBOLA?</string>

</resources>