<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlPrevent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPreventHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/how_do_i_prevent_it"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llPrevent"
        android:layout_below="@+id/tvPreventHeading" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPrevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wash_hands"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wash_hands_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/keep_clean_ev"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
            <TextView
                android:id="@+id/tvPrevent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_clean_ev_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/report"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/report_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
            <TextView
                android:id="@+id/tvPrevent7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protect_yourself"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/protect_yourself_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/educate_everyone"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
            <TextView
                android:id="@+id/tvPrevent10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/educate_everyone_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dont_handle_dead_bush_meat"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvPrevent12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dont_handle_dead_bush_meat_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llPrevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btPreventPrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="&lt;&lt; Previous" />

        <Button
            android:id="@+id/btPreventNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Next >>" />
    </LinearLayout>

</RelativeLayout>