<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlHoax"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHoaxHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/btn_layout_5dp_padding"
        android:text="@string/false_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llHoax"
        android:layout_below="@+id/tvHoaxHeading"
        android:layout_margin="@dimen/layout_8dp_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvHoax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_g_lake"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoax2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/john_g_lake_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvHoax3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bitter_kola"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoax4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitter_kola_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvHoax5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/salt_water"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHoax6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/salt_water_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llHoax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btHoaxPrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_5dp_padding"
            android:layout_weight="1"
            android:text="@string/previous" />

        <Button
            android:id="@+id/btHoaxNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_5dp_padding"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>