<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlSymptoms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSymptomsHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/btn_layout_5dp_padding"
        android:text="@string/what_are_the_symptoms"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llSymptoms"
        android:layout_below="@+id/tvSymptomsHeading" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSymptoms1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudden_high_fever"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/diarrhea"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/vommiting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
            <TextView
                android:id="@+id/tvSymptoms4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weakness"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/joint_and_muscle_ache"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/stomach_pain"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lack_of_appetite"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sore_throat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />

            <TextView
                android:id="@+id/tvSymptoms9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bleeding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btSymptomsPrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_5dp_padding"
            android:layout_weight="1"
            android:text="&lt;&lt; Previous" />

        <Button
            android:id="@+id/btSymptomsNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_5dp_padding"
            android:layout_weight="1"
            android:text="Next >>" />
    </LinearLayout>

</RelativeLayout>